--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,7 +12,7 @@ site_title: FastaiV2Course2020
 company_name: Universidad Nacional Autónoma de México
 # this appears in the footer
 
-github_editme_path: hoftherose/FastaiV2Course/blob/master/docs/
+github_editme_path: hoftherose/FastaiV2Course/blob/master/nbs/
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
 # gitlab_editme_path: tomjoht/documentation-theme-jekyll/blob/gh-pages/
@@ -111,3 +111,5 @@ description: "Intended as a documentation theme based on Jekyll for technical wr
 # baseurl: /documentation-theme-jekyll
 
 github: [metadata]
+
+baseurl: 
