--- a/settings.ini
+++ b/settings.ini
@@ -35,7 +35,7 @@ doc_path = docs
 
 # Anything shown as '%(...)s' is substituted with that setting automatically
 doc_host =  https://%(user)s.github.io
-doc_baseurl = /%(lib_name)s/
+doc_baseurl = 
 git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
 lib_path = %(lib_name)s
 title = %(lib_name)s
