--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,8 +18,9 @@ github_editme_path: hoftherose/FastaiV2Course/blob/master/nbs/
 # gitlab_editme_path: tomjoht/documentation-theme-jekyll/blob/gh-pages/
 # if you're using GitLab, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
-google_analytics:
+google_analytics: UA-158631044-1
 # if you have google-analytics ID, put it in. if not, edit this value to blank.
+# google_search: 014541996127432629310:4uqnt6ky77n
 
 host: 127.0.0.1
 # the preview server used. Leave as is.
@@ -33,12 +34,7 @@ exclude:
     - vendor
 # these are the files and directories that jekyll will exclude from the build
 
-feedback_subject_line: Jekyll documentation theme
-
-feedback_email: hoftherose@gmail.com
-# used as a contact email for the Feedback link in the top navigation bar
-
-# feedback_disable: true
+feedback_disable: true
 # if you uncomment the previous line, the Feedback link gets removed
 
 # feedback_text: "Need help?"
