--- a/settings.ini
+++ b/settings.ini
@@ -39,4 +39,4 @@ lib_path = %(lib_name)s
 title = %(lib_name)s
 
 # Set to True if you want to create a more fancy sidebar.json than the default
-custom_sidebar = True
+custom_sidebar = False
