--- a/settings.ini
+++ b/settings.ini
@@ -18,7 +18,7 @@ license = mit
 status = 1
 
 # Optional. Same format as setuptools requirements
-requirements = ['pytorch','tensorflow','fastcore','nbdev','jupyter','librosa']
+requirements = pytorch tensorflow fastcore nbdev jupyter librosa
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 
