--- a/settings.ini
+++ b/settings.ini
@@ -6,7 +6,7 @@ description = Machine learning related course work for semi-self-taught models.
 keywords = python pytorch tensorflow fastai nbdev fastaiv2 machinelearning deeplearning
 author = Héctor M. de la Rosa Prado
 author_email = hoftherose@gmail.com
-# copyright = Your Name or Company Name
+copyright = Héctor M. de la Rosa Prado
 branch = master
 version = 0.0.1
 min_python = 3.8
@@ -40,3 +40,5 @@ title = %(lib_name)s
 
 # Set to True if you want to create a more fancy sidebar.json than the default
 custom_sidebar = False
+# Custom jekyll styles: if you want more jekyll styles than tip/important/warning, set them here
+jekyll_styles = note, tip, important
