Lesson 2 Download images

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -12,6 +12,9 @@ entries:
     - output: web,pdf
       title: Lesson 1
       url: /PracticalDeepLearning2019.Lesson1
+    - output: web,pdf
+      title: Title
+      url: /PracticalDeepLearning2019.Lesson2
     output: web
     title: FastaiV2Course
   output: web
