Lesson 2 Build Docs

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -13,7 +13,7 @@ entries:
       title: Lesson 1
       url: /PracticalDeepLearning2019.Lesson1
     - output: web,pdf
-      title: Title
+      title: Lesson 2
       url: /PracticalDeepLearning2019.Lesson2
     output: web
     title: FastaiV2Course
