--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -13,6 +13,9 @@ entries:
       title: Lesson 1
       url: /PracticalDeepLearning2019.Lesson1
     - output: web,pdf
+      title: Lesson 1 Experiments
+      url: /PracticalDeepLearning2019.Lesson1_Experiments
+    - output: web,pdf
       title: Lesson 2
       url: /PracticalDeepLearning2019.Lesson2
     output: web
